--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,13 @@
 
   <div id="container">
     <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <p  >Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
+
+
+
+  <span [first-time-onboarding]="{modalOptions: {title: 'onboarding-note-title', message: 'onboarding-note-subtitle', icon: '/assets/icons/onboarding/notes.svg'}, persistField: false}"></span>
+
+
+ 
 </ion-content>
