Change the popover stuff into moduls, now it works

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,8 +20,9 @@
 
 
 
-  <span [first-time-onboarding]="{modalOptions: {title: 'onboarding-note-title', message: 'onboarding-note-subtitle', icon: '/assets/icon/favicon.png'}, persistField: false}"></span>
-
+  <span
+    [first-time-onboarding]="{modalOptions: {title: 'onboarding-note-title', message: 'onboarding-note-subtitle', icon: '/assets/icon/favicon.png'}, persistField: false}"
+  ></span>
 
  
 </ion-content>
